--- a/adminer.css
+++ b/adminer.css
@@ -1,6 +1,7 @@
 /*
- * Theme by Alex Zayats [https://github.com/kkaabbaa]
- * @version 0.1 (August 2016)
+ * Theme by Ph4ntom01 [https://github.com/Ph4ntom01]
+ * Forked from Alex Zayats [https://github.com/kkaabbaa]
+ * @version 0.2 (February 2021)
  */
 
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css);
@@ -13,6 +14,7 @@ body {
 body {
     font-family: "Open Sans", Arial, sans-serif;
     font-size: 12px;
+    background-color: #ffffff;
 }
 
 h1 {
@@ -48,7 +50,12 @@ h3 {
     padding-bottom: 6px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: 500;
     color: #242a30;
 }
@@ -61,15 +68,7 @@ p {
 a {
     color: #00acac;
     text-decoration: none;
-    font-family: Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace !important;
-}
-
-a:visited {
-
-}
-
-#tables a:visited {
-    color: #fff !important;
+    font-family: Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace !important;
 }
 
 a:link:hover,
@@ -78,7 +77,7 @@ a:visited:hover {
     text-decoration: underline;
 }
 
-a[href*=charsets] {
+a[href*="charsets"] {
     display: none;
 }
 
@@ -90,9 +89,11 @@ table {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
+    font-size: 90%;
 }
 
-th, td {
+th,
+td {
     border: 0;
     padding: 6px;
 }
@@ -100,6 +101,10 @@ th, td {
 th {
     background: none;
     color: #34567c;
+}
+
+tbody tr,
+tbody th {
     font-weight: normal;
 }
 
@@ -109,13 +114,19 @@ tbody tr:hover th {
 }
 
 table:not(.checkable) th {
-    min-width: 120px;
+    min-width: 100px;
+}
+
+thead tr {
+    height: 40px;
 }
 
 thead td,
 thead th {
     background: #242a30;
-    padding-right: 15px;
+    padding-right: 10px;
+    text-align: left;
+    font-weight: normal;
 }
 
 thead td,
@@ -146,6 +157,10 @@ table.checkable tbody tr:hover th {
     background: #ffffd9;
 }
 
+table.checkable {
+    min-width: 400px;
+}
+
 .js .checkable .checked td,
 .js .checkable .checked th {
     background: #fbfabc;
@@ -172,11 +187,11 @@ fieldset {
 
 fieldset select {
     margin-right: 5px;
-    margin-bottom: 3px
+    margin-bottom: 3px;
 }
 
-fieldset input[type=button],
-fieldset input[type=submit],
+fieldset input[type="button"],
+fieldset input[type="submit"],
 fieldset p {
     margin-bottom: 0;
 }
@@ -204,7 +219,7 @@ code {
 
 p code,
 pre code,
-pre[contenteditable=true] {
+pre[contenteditable="true"] {
     padding: 10px 15px;
     display: block;
     font-size: 15px;
@@ -231,6 +246,10 @@ p code + a:visited:hover {
     padding-top: 50px;
 }
 
+#content form p {
+    margin-top: 20px;
+}
+
 #content > p {
     margin-bottom: 15px;
 }
@@ -244,16 +263,17 @@ p code + a:visited:hover {
 }
 
 #menu {
+    display: flex;
+    flex-direction: column;
     width: 347px;
     border-right: 1px solid #dae8fa;
     box-shadow: inset -1px 0 0 #fff;
     margin: 0;
-    padding: 0;
     top: 0;
     background: #1a2229;
     bottom: 0;
     position: fixed;
-    padding: 0 15px;
+    padding: 15px 15px;
     box-sizing: border-box;
 }
 
@@ -301,6 +321,15 @@ p code + a:visited:hover {
     padding: 6px;
 }
 
+#menu #dbs select[name="db"] {
+    margin-left: 45px;
+    margin-bottom: 6px;
+}
+
+#menu #dbs select[name="ns"] {
+    margin-left: 17px;
+}
+
 #menu p.links {
     margin: 0 0 15px;
     border-top: 0;
@@ -311,7 +340,7 @@ p code + a:visited:hover {
 }
 
 #menu p.links a {
-    padding: 8px;
+    padding: 8px 0 8px 0;
     margin: 0;
     display: table-cell;
     font-size: 12px;
@@ -356,11 +385,6 @@ p code + a:visited:hover {
 #tables {
     max-height: 100%;
     margin: 0 -15px !important;
-    position: absolute;
-    left: 15px;
-    right: 15px;
-    bottom: 22px;
-    top: 195px;
     overflow: hidden !important;
     overflow-y: auto !important;
 }
@@ -370,9 +394,18 @@ p code + a:visited:hover {
     overflow-y: auto !important;
 }
 
+#tables li {
+    display: flex;
+    flex-direction: row;
+}
+
 #tables a {
     float: right;
     padding: 6px 6px 6px 24px;
+}
+
+#tables a .structure {
+    padding-right: 50px;
 }
 
 .rtl #tables a {
@@ -397,14 +430,27 @@ p code + a:visited:hover {
 #tables a.active + a {
     background: #00acac;
     color: #fff;
+    text-align: center;
+    font-weight: bolder;
 }
 
-#tables > a.active + a:before, #tables > a.active:before {
+#tables > a.active + a:before,
+#tables > a.active:before {
     color: #fff;
 }
 
 #tables br {
     display: none;
+}
+
+#tables .structure,
+#tables .view {
+    width: 100%;
+}
+
+#tables .structure:hover,
+#tables .view:hover {
+    text-align: center;
 }
 
 .js .column {
@@ -484,7 +530,7 @@ input[type="search"] {
     border: 1px solid #bbbbbb;
     padding: 6px;
     margin: 0;
-    box-sizing: border-box;
+    box-sizing: content-box;
     border: 1px solid #ccd0d4;
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -506,8 +552,8 @@ table:not(#table) input[type="search"] {
     min-width: 280px;
 }
 
-input[type=submit],
-input[type=button] {
+input[type="submit"],
+input[type="button"] {
     border: 0;
     padding: 7px 12px;
     cursor: pointer;
@@ -517,36 +563,36 @@ input[type=button] {
     color: #fff;
     font-weight: bold;
     margin-bottom: 5px;
-    transition: background .4s ease;
+    transition: background 0.4s ease;
     color: #fff;
     background: #00acac;
     border-color: #00acac;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    font-family: Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace !important;
+    font-family: Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace !important;
 }
 
-input[type=submit][disabled],
-input[type=button][disabled] {
+input[type="submit"][disabled],
+input[type="button"][disabled] {
     background: #aeaeae !important;
     color: #e9e9e9;
     cursor: not-allowed;
 }
 
-input[type=submit]:hover,
-input[type=button]:hover,
-input[type=submit]:focus,
-input[type=button]:focus {
+input[type="submit"]:hover,
+input[type="button"]:hover,
+input[type="submit"]:focus,
+input[type="button"]:focus {
     background: #008a8a;
     border-color: #008a8a;
 }
 
-.logout input[type=submit] {
+.logout input[type="submit"] {
     background: #f40204;
 }
 
-.logout input[type=submit]:hover {
+.logout input[type="submit"]:hover {
     background: #d50204;
 }
 
@@ -653,6 +699,7 @@ label {
 
 .jush {
     color: #000;
+    background-color: #f5f5f5;
 }
 
 .jush a {
@@ -709,7 +756,7 @@ label {
 }
 
 #tables > a:before {
-    content: '\f1db';
+    content: "\f1db";
     font-family: FontAwesome;
     position: absolute;
     left: 15px;
@@ -717,4 +764,36 @@ label {
     color: #889097;
     margin-top: 5px;
     margin-left: -6px;
+}
+
+p.links:last-child {
+    padding-bottom: 20px !important;
+}
+
+#form {
+    position: relative;
+}
+
+form div a {
+    padding-bottom: 20px;
+}
+
+#form pre,
+form pre {
+    width: 850px !important;
+    height: 400px !important;
+}
+
+.footer {
+    position: relative;
+    border-top: none !important;
+    border-image: none !important;
+}
+
+.links + form + p + form .footer fieldset {
+    height: 50px;
+}
+
+.scrollable + .footer {
+    margin-top: 30px;
 }
